[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/UI/mainUI.gd" id="1_pdh8v"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_pdh8v")

[node name="SmellLabel" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -250.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"] 